<?xml version="1.0" encoding="utf-8"?><!--Author Mr. Deepesh Gupta(+91 98271 77773).
    Sr. Software Developer @Maxworth Electronics Systems-Delhi.
    Date: 27/11/2022
   -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header_base"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="3dp"
        android:paddingTop="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:background="@color/menucolor"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:background="@drawable/quater_circle" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/global_half_padding">

                <LinearLayout
                    android:id="@+id/layout_username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sample_2_layout_2_height"
                    android:layout_margin="@dimen/global_margin"
                    android:background="@drawable/edit_text_oval_shape_white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/global_margin"
                        android:background="@drawable/user_icon" />

                    <EditText
                        android:id="@+id/etuserid"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_user_name"
                        android:inputType="textEmailAddress"
                        android:maxLength="25"
                        android:padding="@dimen/global_half_padding"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/menucolor"
                        android:textSize="@dimen/global_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sample_2_layout_2_height"
                    android:layout_below="@+id/layout_username"
                    android:layout_margin="@dimen/global_margin"
                    android:background="@drawable/edit_text_oval_shape_white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/global_margin"
                        android:background="@drawable/password_icon" />

                    <EditText
                        android:id="@+id/etpassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:padding="@dimen/global_half_padding"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/menucolor"
                        android:textSize="@dimen/global_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LayoutCaptch"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="@dimen/global_margin"
                    android:gravity="center"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_captcha"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/corners_editext"
                        android:inputType="textEmailAddress"
                        android:maxLength="6"
                        android:padding="12dp"
                        android:paddingLeft="4dp"
                        android:textAlignment="center"

                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/global_text_size"
                        android:textStyle="italic" />


                    <ImageButton
                        android:id="@+id/btn_refresh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/global_half_margin"
                        android:background="@drawable/ic_refresh_icon" />

                    <EditText
                        android:id="@+id/etcaptcha"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_oval_shape_white"
                        android:hint="Enter Captcha"
                        android:inputType="textEmailAddress"
                        android:maxLength="6"
                        android:padding="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/menucolor"
                        android:textSize="@dimen/global_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnlogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sample_2_layout_2_height"
                    android:layout_margin="@dimen/global_margin"
                    android:background="@drawable/round_corner_button"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/global_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnDataSYnc"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sample_2_layout_2_height"
                    android:layout_margin="@dimen/global_margin"
                    android:background="@drawable/round_corner_button_yellow"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/datasync"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/global_text_size" />
                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/global_margin"
                    android:gravity="right"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/btnsetting"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/ic_nut_icon"
                        android:visibility="visible" />
                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pblogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/logo100" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/global_half_margin"
            android:text="@string/indian_oil"
            android:textColor="@color/colorDarkBlue"
            android:textSize="14sp"
            android:textStyle="bold" />
    </FrameLayout>
</LinearLayout>